fixed pagination bullet spacing

--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -7,7 +7,7 @@
 
 .swiper-slide img {
   width: 100%;
-  height: 100%;
+  height: 50vh;
   object-fit: cover;
   border-radius: 10px;
 }
